# inferco

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt
frontend/: gatsby-config.ts  package.json
frontend/src/components/: atoms.tsx  footer.tsx  icons.tsx  types.ts  utils.ts
frontend/src/components/views/builder/: build.tsx  datasources.tsx  models.tsx
frontend/src/components/views/builder/utils/: datasourceconfig.tsx  modelconfig.tsx  selectors.tsx
frontend/src/components/views/playground/: chatbox.tsx  ra.tsx
frontend/src/hooks/: provider.tsx
frontend/src/pages/: build.tsx
frontend/src/styles/: global.css
inferco/: cli.py  datamodel.py  version.py  workflowmanager.py
inferco/database/: utils.py
inferco/database/migrations/: env.py
inferco/database/skills/: get_postgres_schema_information.py
inferco/utils/: utils.py
inferco/web/: app.py
