[tool.poetry]
name = "inferco"
version = "0.1.0"
description = ""
authors = ["Nick Maritn <nickleomartin@gmail.com>"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "inferco"
authors = [
  { name="Nick Martin", email="nickleomartin@gmail.com" },
]
description = "Inferco"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "pydantic",
    "fastapi",
    "typer",
    "uvicorn",
    "arxiv",
    "pyautogen[gemini]>=0.2.0",
    "python-dotenv",
    "websockets",
    "numpy < 2.0.0",
    "sqlmodel",
    "psycopg",
    "alembic",
    "loguru",
    "psycopg2",
]
optional-dependencies = {web = ["fastapi", "uvicorn"], database = ["psycopg"]}

dynamic = ["version"]

[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = {attr = "inferco.version.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
include = ["inferco*"]
exclude = ["*.tests*"]
namespaces = false

[tool.setuptools.package-data]
"inferco" = ["*.*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]

[project.scripts]
inferco = "inferco.cli:run"
